--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>D-What???</title>
-<script src="lib/dice_gen.js"></script>
+<script src="lib/die.js"></script>
 <script src="lib/random.js"></script>
 <script src="lib/tray.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
