--- a/attempt.html
+++ b/attempt.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html> <!--manifest="lib/D_What.appcache">-->
+<html>
 <head>
 <meta charset="UTF-8">
 <title>D-What???</title>
 <style>
 body {
+    min-width: 518px;
     background-image: url("images/bg.png");
     margin:0px;
     color:lightgrey;
@@ -31,6 +32,7 @@ body {
 </style>
 </head>
 <body>
+    <lightbox></lightbox>
     <dicebag></dicebag>
     <div id="appdiv1">
         <div id="contain">
@@ -42,18 +44,57 @@ body {
     <roll></roll>
     <settings></settings>
     <clear></clear>
-    <taprack></taprack>
-
+<script src="lib/createdie.js"></script>
+<script src="lib/random.js"></script>
 <script src="riot-tags/dicebag.tag" type="riot/tag"></script>
 <script src="riot-tags/dicetray.tag" type="riot/tag"></script>
 <script src="riot-tags/total.tag" type="riot/tag"></script>
 <script src="riot-tags/roll.tag" type="riot/tag"></script>
 <script src="riot-tags/settings.tag" type="riot/tag"></script>
+<script src="riot-tags/lightbox.tag" type="riot/tag"></script>
 <script src="riot-tags/tabletop.tag" type="riot/tag"></script>
 <script src="riot-tags/clear.tag" type="riot/tag"></script>
 <script src="riot-tags/taprack.tag" type="riot/tag"></script>
 <script src="https://cdn.rawgit.com/riot/riot/master/riot%2Bcompiler.min.js"></script>
 <script>
+    var Refresh = {
+      now : function () {
+        riot.update();
+      }
+    };
+	var Tray_dice = [
+    	{type : 2, count : 0},
+    	{type : 4, count : 0},
+    	{type : 6, count : 0},
+    	{type : 8, count : 0},
+    	{type : 10, count : 0},
+    	{type : 12, count : 0},
+    	{type : 20, count : 0},
+    	{type : 100, count : 0},
+	];
+    var Results = [];
+    var Settings = {
+        random: 'standard',
+        highlight_high: 1,
+        highlight_high_color: "#00FF00",
+        highlight_low: 1,
+        highlight_low_color: "#FF0000",
+        highlight_reroll: 1,
+        highlight_reroll_color: "#0000FF",
+        re_roll_list: [],//Visit
+        re_roll_these: {},//Visit
+        re_roll_high: 1,
+        dice_tapping: 0,
+        state: "app",
+        game: "none",
+        slider_value: 8,
+        big_top: "total"
+
+    };
+    riot.mixin(Refresh);
+    riot.mixin(Tray_dice);
+    riot.mixin(Results);
+    riot.mixin(Settings);
     riot.mount('*');
 </script>
 </body>
