--- a/index.html
+++ b/index.html
@@ -1,274 +1,104 @@
 <!DOCTYPE html>
-<html> <!--manifest="lib/D_What.appcache">-->
+<html>
 <head>
-<meta charset="UTF-8">
-<title>D-What???</title>
-<script src="lib/die.js"></script>
-<script src="lib/random.js"></script>
-<script src="lib/tray.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<style>
-body {
-    background-image: url("images/bg.png");
-    margin:0px;
-    color:lightgrey;
-    font-size:18px;
-    font-family:Copperplate;
-}
-input {
-    border:0;
-    background-color:#303030;
-    color:lightgrey;
-    padding-left:5px;
-    font-size:16px;
-}
-img, svg{
-    cursor:pointer;
-}
-p {
-    margin-top:0px;
-    margin-bottom:5px;
-}
-[type~=color] {
-    float:right;
-    margin:0px;
-    padding:0px;
-    height:20px;
-}
-.fieldset {
-    min-height:110px;
-}
-.transparent_bg {
-    background-color:transparent;
-}
-.svg_container {
-    width:60px;
-    height:60px;
-    float:left;
-    padding:2px;
-}
-.settings_blocks {
-    width:220px;
-    float:left;
-    height:130px;
-}
-.small_side_button {
-    position:absolute;
-    z-index:2;
-    width:50px;
-    height:50px;
-}
-.big_side_button {
-    position:absolute;
-    z-index:2;
-    width:80px;
-    height:80px;
-}
-.dice_rack {
-    height:45px;
-    width:45px;
-    margin:0px;
-}
-.queue_img {
-    height:35px;
-    width:35px;
-    margin:0px;
-}
-.queue_div {
-    float:left;
-    position:relative;
-    margin:5px;
-    display:none;
-}
-.queue_count {
-    display:inline;
-    color:orange;
-}
-.die_result, .die_result_reroll {
-    height:55px;
-    width:55px;
-    margin:5px;
-}
-.die_result_reroll {
-    border:1px solid orange;
-}
-.count_div {
-    position:absolute;
-    top:21px;
-    left:35px;
-    color:orange;
-}
-#tap_die_rack {
-    position: absolute;
-    top: calc(50% - 49px);
-    left: calc(50% - 190.5px);
-    display: none;
-    background-color:rgba(100,100,100,0.9);
-    padding:5px;
-    z-index:100;
-}
-#bottom_slider {
-    position:absolute;
-    bottom:12px;
-    left:180px;
-    right:180px;
-    display:none;
-}
-#svg_preload_div {
-    display:none;
-}
-#result_div {
-
-}
-#appdiv1, #settings_div {
-    position:absolute;
-    z-index:2;
-    left:50px;
-    top:50px;
-    right:50px;
-    bottom:50px;
-    background-color:rgba(255,255,255,0.1);
-    padding-left:10px;
-    padding-right:10px;
-    overflow:auto;
-}
-#settings_div {
-    z-index:5;
-    display:none;
-    background-color:grey;
-}
-#big_top {
-    top:0px;
-    left:0px;
-    background-color: rgba(100,100,100,0.9);
-    text-align: center;
-    vertical-align: middle;
-    line-height: 80px;
-    font-size: 1.5em;
-    color:orange;
-    cursor:pointer;
-}
-#id_div {
-    bottom:0px;
-    left:0px;
-    width:80px;
-    height:80px;
-    background-color: rgba(100,100,100,0.9);
-    text-align: center;
-    vertical-align: middle;
-    line-height: 80px;
-    font-size: 1.5em;
-    color:orange;
-    cursor:pointer;
-    position:absolute;
-    background-image: url("images/settings.svg");
-    background-size: 80px 80px;
-    z-index:10;
-}
-#small_top_left {
-    top:0px;
-    left:120px;
-    background-color:red;
-    display:none;
-    cursor:pointer;
-}
-#small_top_right {
-    top:120px;
-    left:0px;
-    background-color:green;
-    display:none;
-    cursor:pointer;
-}
-#available_dice_div {
-    position:absolute;
-    z-index:2;
-    height:50px;
-    top:0px;
-    left:90px;
-    margin-top:5px;
-}
-#big_bottom {
-    bottom:0px;
-    right:0px;
-    background-color: rgba(100,100,100,0.9);
-    background-image: url("images/roll.svg");
-    background-size: 80px 80px;
-    cursor:pointer;
-}
-#small_bottom_right {
-    bottom:120px;
-    right:0px;
-    background-color:green;
-    display:none;
-    cursor:pointer;
-}
-#small_bottom_left {
-    bottom:0px;
-    right:120px;
-    background-color: rgba(100,100,100,0.9);
-    background-image: url("images/clear.svg");
-    background-size: 50px 50px;
-    cursor:pointer;
-}
-#slider_number {
-    bottom:0px;
-    left:120px;
-    background-color: rgba(100,100,100,0.9);
-    background-size: 50px 50px;
-    text-align:center;
-    font-size:37px;
-    line-height:50px;
-}
-</style>
+    <link rel="manifest" href="manifest.json">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta charset="UTF-8">
+    <title>D-What???</title>
+    <style>
+    body {
+        min-width: 518px;
+        background-image: url("images/bg.png");
+        margin:0px;
+        color:lightgrey;
+        font-size:18px;
+        font-family:Copperplate;
+    }
+    #appdiv1 {
+        position:absolute;
+        z-index:2;
+        left:50px;
+        top:50px;
+        right:50px;
+        bottom:50px;
+        background-color:rgba(255,255,255,0.1);
+        padding-left:10px;
+        padding-right:10px;
+        overflow:auto;
+    }
+    #contain {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+    </style>
 </head>
-<div id="available_dice_div">
-	<img alt="D2" id="rack_d2" class="dice_rack" src="images/2_2.svg" onClick="use_me(2);">
-	<img alt="D4" id="rack_d4" class="dice_rack" src="images/4_4.svg" onClick="use_me(4);">
-	<img alt="D6" id="rack_d6" class="dice_rack" src="images/6_6.svg" onClick="use_me(6);">
-	<img alt="D8" id="rack_d8" class="dice_rack" src="images/8_8.svg" onClick="use_me(8);">
-	<img alt="D10" id="rack_d10" class="dice_rack" src="images/10_10.svg" onClick="use_me(10);">
-	<img alt="D12" id="rack_d12" class="dice_rack" src="images/12_12.svg" onClick="use_me(12);">
-	<img alt="D20" id="rack_d20" class="dice_rack" src="images/20_20.svg" onClick="use_me(20);">
-	<img alt="D100" id="rack_d100" class="dice_rack" src="images/100_100.svg" onClick="use_me(100);">
-</div>
-<div id="appdiv1">
-	<fieldset id="queue_field">
-		<legend>Queue</legend>
-		<div id="queue_div">
-		<div class="queue_div" id="queue_d2_div"><img alt="D2" class="queue_img" src="images/2_2.svg" onClick='queue_engine(2, "remove");'><div class="queue_count" id="queue_d2_count"></div></div>
-		<div class="queue_div" id="queue_d4_div"><img alt="D4" class="queue_img" src="images/4_4.svg" onClick='queue_engine(4, "remove");'><div class="queue_count" id="queue_d4_count"></div></div>
-		<div class="queue_div" id="queue_d6_div"><img alt="D6" class="queue_img" src="images/6_6.svg" onClick='queue_engine(6, "remove");'><div class="queue_count" id="queue_d6_count"></div></div>
-		<div class="queue_div" id="queue_d8_div"><img alt="D8" class="queue_img" src="images/8_8.svg" onClick='queue_engine(8, "remove");'><div class="queue_count" id="queue_d8_count"></div></div>
-		<div class="queue_div" id="queue_d10_div"><img alt="D10" class="queue_img" src="images/10_10.svg" onClick='queue_engine(10, "remove");'><div class="queue_count" id="queue_d10_count"></div></div>
-		<div class="queue_div" id="queue_d12_div"><img alt="D12" class="queue_img" src="images/12_12.svg" onClick='queue_engine(12, "remove");'><div class="queue_count" id="queue_d12_count"></div></div>
-		<div class="queue_div" id="queue_d20_div"><img alt="D20" class="queue_img" src="images/20_20.svg" onClick='queue_engine(20, "remove");'><div class="queue_count" id="queue_d20_count"></div></div>
-		<div class="queue_div" id="queue_d100_div"><img alt="D100" class="queue_img" src="images/100_100.svg" onClick='queue_engine(100, "remove");'><div class="queue_count" id="queue_d100_count"></div></div>
-		</div>
-	</fieldset>
-	<fieldset id="result_field">
-		<legend>Result</legend>
-		<div id="result_div"></div>
-	</fieldset>
-</div>
-<div id="big_top" class="big_side_button" title="Total">Total</div>
-<div id="small_top_left" class="small_side_button"></div>
-<div id="small_top_right" class="small_side_button"></div>
-<div id="big_bottom" class="big_side_button" title="Roll" onClick="queue_roll();"></div>
-<div id="small_bottom_right" class="small_side_button"></div>
-<div id="small_bottom_left" class="small_side_button" title="clear" onClick="clear_me();"></div>
-<div id="id_div" onClick="settings_controller.toggle_display();"></div>
-<div id="bottom_slider"><input id="bottom_slider_widget" type="range" min="1" max="10" step="1" value="8" style="width:100%; padding:0;" onChange="success_slider_engine();"></div>
-<div id="slider_number" class="small_side_button"></div>
-<div id="tap_die_rack">
-	<p>Choose what die to tap with</p>
-	<img alt="D2" id="tap_rack_d2" class="dice_rack" src="images/2_2.svg" onClick="use_me(2, 1);">
-	<img alt="D4" id="tap_rack_d4" class="dice_rack" src="images/4_4.svg" onClick="use_me(4, 1);">
-	<img alt="D6" id="tap_rack_d6" class="dice_rack" src="images/6_6.svg" onClick="use_me(6, 1);">
-	<img alt="D8" id="tap_rack_d8" class="dice_rack" src="images/8_8.svg" onClick="use_me(8, 1);">
-	<img alt="D10" id="tap_rack_d10" class="dice_rack" src="images/10_10.svg" onClick="use_me(10, 1);">
-	<img alt="D12" id="tap_rack_d12" class="dice_rack" src="images/12_12.svg" onClick="use_me(12, 1);">
-	<img alt="D20" id="tap_rack_d20" class="dice_rack" src="images/20_20.svg" onClick="use_me(20, 1);">
-	<img alt="D100" id="tap_rack_d100" class="dice_rack" src="images/100_100.svg" onClick="use_me(100, 1);">
-</div>
+<body>
+    <lightbox></lightbox>
+    <dicebag></dicebag>
+    <div id="appdiv1">
+        <div id="contain">
+        <dicetray></dicetray>
+        <tabletop></tabletop>
+        </div>
+    </div>
+    <total></total>
+    <roll></roll>
+    <settings></settings>
+    <clear></clear>
+<script src="lib/createdie.js"></script>
+<script src="lib/random.js"></script>
+<script src="riot-tags/dicebag.tag" type="riot/tag"></script>
+<script src="riot-tags/dicetray.tag" type="riot/tag"></script>
+<script src="riot-tags/total.tag" type="riot/tag"></script>
+<script src="riot-tags/roll.tag" type="riot/tag"></script>
+<script src="riot-tags/settings.tag" type="riot/tag"></script>
+<script src="riot-tags/lightbox.tag" type="riot/tag"></script>
+<script src="riot-tags/tabletop.tag" type="riot/tag"></script>
+<script src="riot-tags/clear.tag" type="riot/tag"></script>
+<script src="riot-tags/taprack.tag" type="riot/tag"></script>
+<script src="https://cdn.rawgit.com/riot/riot/master/riot%2Bcompiler.min.js"></script>
+<script>
+    var Refresh = {
+      now : function () {
+        riot.update();
+      }
+    };
+	var Tray_dice = [
+    	{type : 2, count : 0},
+    	{type : 4, count : 0},
+    	{type : 6, count : 0},
+    	{type : 8, count : 0},
+    	{type : 10, count : 0},
+    	{type : 12, count : 0},
+    	{type : 20, count : 0},
+    	{type : 100, count : 0},
+	];
+    var Results = [];
+    var Settings = {
+        random: 'standard',
+        highlight_high: 1,
+        highlight_high_color: "#00FF00",
+        highlight_low: 1,
+        highlight_low_color: "#FF0000",
+        highlight_reroll: 1,
+        highlight_reroll_color: "#0000FF",
+        re_roll_list: [],//Visit
+        re_roll_these: {},//Visit
+        re_roll_high: 1,
+        dice_tapping: 0,
+        state: "app",
+        game: "none",
+        slider_value: 8,
+        big_top: "total"
+
+    };
+    riot.mixin(Refresh);
+    riot.mixin(Tray_dice);
+    riot.mixin(Results);
+    riot.mixin(Settings);
+    riot.mount('*');
+</script>
 </body>
 </html>
